fixed floating image overflow in "onebox" link preview widget

--- a/style.css
+++ b/style.css
@@ -475,6 +475,7 @@ aside.onebox header {
 }
 .onebox article {
     margin: 0;
+    overflow: auto;
 }
 .onebox .label1 {
     /* override onebox.scss:748 */
